[gd_scene load_steps=5 format=3 uid="uid://qpxvgen0enlx"]

[ext_resource type="Script" path="res://ui/game/content_selector/content_selector_window.gd" id="1_jvm0o"]
[ext_resource type="Texture2D" uid="uid://b24hivrw2fe5n" path="res://assets/ui/icons/delete.tres" id="2_yn8x2"]
[ext_resource type="Texture2D" uid="uid://3c3cfli0hgal" path="res://assets/ui/icons/cross.tres" id="3_ssf2t"]
[ext_resource type="Texture2D" uid="uid://d4h3l85gk7ahu" path="res://assets/ui/icons/check.tres" id="4_j0vla"]

[node name="ContentSelectorWindow" type="Window"]
size = Vector2i(480, 560)
script = ExtResource("1_jvm0o")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SelectorPanels" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="ContentTypes" type="HBoxContainer" parent="VBoxContainer/SelectorPanels"]
unique_name_in_owner = true
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="CurrentSelected" type="TextureRect" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="AmountSlider" type="HSlider" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Amount" type="LineEdit" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
text = "1"
virtual_keyboard_type = 2

[node name="Clear" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("2_yn8x2")

[node name="Cancel" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("3_ssf2t")

[node name="Confirm" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("4_j0vla")

[connection signal="value_changed" from="VBoxContainer/PanelContainer/HBoxContainer/AmountSlider" to="." method="_on_amount_slider_value_changed"]
[connection signal="text_changed" from="VBoxContainer/PanelContainer/HBoxContainer/Amount" to="." method="_on_amount_text_changed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/Confirm" to="." method="_on_confirm_pressed"]
